--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <p><b><font color="white"><h1>HOME PAGE</p></b></h1></font>
     </header>
     <nav>
-        <a href="file:///C:/Users/bsw2408/Downloads/login.html">Login</a>
-        <a href="file:///C:/Users/bsw2408/Downloads/index.html">Profile</a>
+        <a href="login.html">Login</a>
+        <a href="index.html">Profile</a>
         <a href="#contact">Contact</a>
     </nav>
     <main>
