--- a/login.html
+++ b/login.html
@@ -86,7 +86,7 @@ direction="right"
 </marquee>
 
 <p><b><font color:"blue">FILL REGISTERATION FORM FOR MORE DETAILS</p></b></font>
-<a href="file:///C:/Users/bsw2408/Downloads/registeration.html">REGISTERATION FORM</a>
+<a href="registeration.html">REGISTERATION FORM</a>
 </center>
 </body>
 </html>
