--- a/registeration.html
+++ b/registeration.html
@@ -93,7 +93,7 @@ window.location.href="homepage.html",
 
 <hr style="height:5px;border-width:0;color:gray;background-color:gray">
 <center>
-<p><b>TO VISIT MY PROFILE CLICK THIS:</p></b><a href="index.html">MY PROFILE</a>
+<p><b>TO VISIT MY PROFILE CLICK THIS:</p></b><a href="my profile.html">MY PROFILE</a>
 </center>
 </body>
 </html>
